--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <p>My goal is to combine traditional crochet techniques with modern designs to make products that are both functional and beautiful.</p>
         </div>
         <div class="about-image">
-            <img src="images/logo.jpeg" alt="Akansha Crochet">
+            <img src="logo.jpeg" alt="Akansha Crochet">
         </div>
     </div>
 </section>
@@ -40,3 +40,4 @@
 
 </body>
 </html>
+
