Cleaned duplicates, kept final HTML, CSS, and JS

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akansha Crochet</title>
     <link rel="stylesheet" href="crochet.css">
 </head>
@@ -27,6 +27,7 @@
         <a href="contact.html" class="btn">Contact Me</a>
     </div>
 </section>
+
 <footer class="footer">
     <p>&copy; 2026 Akansha Crochet. All rights reserved.</p>
     <p>
@@ -35,45 +36,8 @@
     </p>
 </footer>
 
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Akansha Crochet</title>
-    <link rel="stylesheet" href="crochet.css">
-</head>
-<body>
-
-<header class="header">
-    <h1 class="logo">Akansha Crochet</h1>
-    <nav class="navbar">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="about.html" class="nav-link">About</a>
-        <a href="products.html" class="nav-link">Products</a>
-      <!--   <a href="contact.html" class="nav-link">Contact</a>-->
-    </nav>
-</header>
-
-<!-- HERO SECTION -->
-<section class="hero">
-    <div class="hero-text">
-        <h2>Welcome to Akansha Crochet</h2>
-        <p>Handmade crochet bags, tops, and keychains crafted with love.</p>
-        <a href="products.html" class="btn">Shop Now</a>
-        <a href="contact.html" class="btn">Contact Me</a>
-    </div>
-</section>
-<footer class="footer">
-    <p>&copy; 2026 Akansha Crochet. All rights reserved.</p>
-    <p>
-        <a href="https://www.instagram.com/crochet._15/" target="_blank">Instagram</a> |
-        <a href="contact.html">Contact</a>
-    </p>
-</footer>
+<!-- LINK TO JS -->
+<script src="crochet.js"></script>
 
 </body>
 </html>
-
